# casc.c

./: .clang-format  CMakeLists.txt  TODO  static.c
cmake/: casc.c-symbols.cmake  casc.c-version.cmake
include/casc.c/: allocator.h  ast.h  config.h  error.h  filenames.h  keywords.h  lex_util.h  lexer.h  preprocess.h  source.h  symbols.h.in  types.h
lib/: keywords.c  preprocess.c  source_manager.c
src/: casc.c
